refactor(core): ChatColorの使用箇所をコンポーネントにほとんど置き換えました