@@ -1,16 +1,20 @@
 package com.lunar_prototype.deepwither;
 
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
+import java.util.ArrayList;
+import java.util.List;
+
 public class BlacksmithGUI {
 
-    private static final String GUI_TITLE = ChatColor.DARK_GRAY + "鍛冶屋メニュー";
+    public static final Component GUI_TITLE = Component.text("鍛冶屋メニュー", NamedTextColor.DARK_GRAY);
 
     /**
      * 鍛冶屋GUIをプレイヤーに開く
@@ -22,27 +26,26 @@ public class BlacksmithGUI {
         // --- GUI アイテムの定義 ---
 
         // 1. 修理ボタン (スロット13: 中央)
-        ItemStack repairItem = createGuiItem(Material.ANVIL, ChatColor.GREEN + "武器修理",
-                ChatColor.GRAY + "メインハンドの装備を修理します。",
-                ChatColor.YELLOW + "費用は損耗率に応じて変動します。"
+        ItemStack repairItem = createGuiItem(Material.ANVIL, Component.text("武器修理", NamedTextColor.GREEN),
+                Component.text("メインハンドの装備を修理します。", NamedTextColor.GRAY),
+                Component.text("費用は損耗率に応じて変動します。", NamedTextColor.YELLOW)
         );
         gui.setItem(13, repairItem);
 
         // 2. 強化ボタン (スロット11)
-        ItemStack upgradeItem = createGuiItem(Material.DIAMOND_PICKAXE, ChatColor.AQUA + "装備強化",
-                ChatColor.GRAY + "未実装: 装備のレベルを上げます。"
+        ItemStack upgradeItem = createGuiItem(Material.DIAMOND_PICKAXE, Component.text("装備強化", NamedTextColor.AQUA),
+                Component.text("未実装: 装備のレベルを上げます。", NamedTextColor.GRAY)
         );
         gui.setItem(11, upgradeItem);
 
         // 3. クラフトボタン (スロット15)
-        ItemStack craftItem = createGuiItem(Material.CRAFTING_TABLE, ChatColor.AQUA + "アイテムクラフト",
-                ChatColor.GRAY + "新しいアイテムを作成します。"
+        ItemStack craftItem = createGuiItem(Material.CRAFTING_TABLE, Component.text("アイテムクラフト", NamedTextColor.AQUA),
+                Component.text("新しいアイテムを作成します。", NamedTextColor.GRAY)
         );
         gui.setItem(15, craftItem);
 
         // 4. 背景のガラス板（装飾）
-        // BlacksmithGUI.java:43
-        ItemStack background = createGuiItem(Material.GRAY_STAINED_GLASS_PANE, " ");
+        ItemStack background = createGuiItem(Material.GRAY_STAINED_GLASS_PANE, Component.text(" "));
         for (int i = 0; i < 27; i++) {
             if (gui.getItem(i) == null) {
                 gui.setItem(i, background);
@@ -53,21 +56,17 @@ public class BlacksmithGUI {
     }
 
     // アイテム作成ヘルパー
-    // BlacksmithGUI.java:56
-    private ItemStack createGuiItem(Material material, String name, String... lore) {
+    private ItemStack createGuiItem(Material material, Component name, Component... lore) {
         ItemStack item = new ItemStack(material);
         ItemMeta meta = item.getItemMeta();
         if (meta != null) {
-            meta.setDisplayName(name);
+            meta.displayName(name);
 
-            // --- SAFE FIX: Check for null before using Arrays.asList ---
-            if (lore != null) {
-                meta.setLore(java.util.Arrays.asList(lore)); // <--- LINE 60
+            if (lore != null && lore.length > 0) {
+                meta.lore(List.of(lore));
             } else {
-                // Optionally set it to an empty list if null was passed
-                meta.setLore(new java.util.ArrayList<>());
+                meta.lore(new ArrayList<>());
             }
-            // ----------------------------------------------------------
 
             item.setItemMeta(meta);
         }
